02-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        role: node-c   # backend i mysql na tym samym węźle
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
