03-mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-sql
  namespace: backend
  labels:
    app: mysql
spec:
  nodeSelector:
    role: node-c
  containers:
    - name: mysql
      image: mysql:8
      ports:
        - containerPort: 3306
