04-frontend-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
