05-backend-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
