06-mysql-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql
  namespace: backend
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
